同步加载数据时，加载数据

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="/static/tg-editable-grid.min.js"></script>
-    <link rel="stylesheet" href="/static/test.css">
+    <link rel="stylesheet" href="/static/tg-editable-grid.css">
     <link rel="stylesheet" href="/static/inspire-tree-light.min.css">
     <link rel="stylesheet" href="/static/flatpickr.min.css">
     <title>webpack v4</title>
